<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SecureNotes</string>

    <string name="txt_usuario">Usuario:</string>
    <string name="txt_contrasena">Contraseña:</string>
    <string name="btn_entrar">Entrar</string>

    <string name="txt_titulo_principal">Mi Bóveda</string>
    <string name="txt_sin_notas">Aún no tienes notas o contraseñas guardadas.</string>
    <string name="btn_nueva_nota">+ Nueva Nota</string>
    <string name="filtro_todo">Todo</string>
    <string name="filtro_notas">Notas</string>
    <string name="filtro_pass">Contraseñas</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="nueva_nota">Nueva nota</string>
    <string name="titulo">Título:</string>
    <string name="usuario">Usuario de la cuenta:</string>
    <string name="contrasena">Contraseña de la cuenta:</string>
    <string name="comentario">Comentarios: (opcional)</string>
    <string name="contrasena_individual">Contraseña individual: (opcional)</string>
    <string name="nota">Nota:</string>
    <string name="crear">Crear</string>
    <string name="cancelar">Cancelar</string>
    <string name="protegido">Este contenido esta protegido</string>
    <string name="introducir_contrasena_individual">Introduce la contraseña individual para poder ver el contenido</string>
    <string name="contrasena_individual_editar">Introduce la contraseña individual para poder editar el contenido</string>
    <string name="desbloquear">Desbloquear</string>
</resources>