<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo_principal"
    android:fitsSystemWindows="true"
    tools:context=".NuevaNotaActivity">

    <!-- La barra superior con diseño clásico de Android -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_nota"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#121A2F"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/titulo"
        android:textColor="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_nota" />

    <EditText
        android:id="@+id/et_titulo"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/texto_principal"
        android:backgroundTint="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titulo" />

    <TextView
        android:id="@+id/tv_nota"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/nota"
        android:textColor="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_titulo" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/texto_principal"
        android:backgroundTint="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nota" />

    <TextView
        android:id="@+id/tv_comentario"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/comentario"
        android:textColor="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_usuario" />

    <EditText
        android:id="@+id/et_comentario"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/texto_principal"
        android:backgroundTint="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_comentario" />

    <TextView
        android:id="@+id/tv_contrasena_individual"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/contrasena_individual"
        android:textColor="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_comentario" />

    <EditText
        android:id="@+id/et_contrasena_individual"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:ems="10"
        android:inputType="text"
        android:textColor="@color/texto_principal"
        android:backgroundTint="@color/texto_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contrasena_individual" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/acento_celeste"
        android:text="@string/crear"
        android:textColor="@color/texto_principal"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_cancelar"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_cancelar"
        android:layout_width="150dp"
        android:layout_height="65dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/red"
        android:text="@string/cancelar"
        android:textColor="@color/texto_principal"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_crear" />

</androidx.constraintlayout.widget.ConstraintLayout>